<resources>
    <string name="app_name">SHOPING LIST</string>
    <string name="vegetables">vegetables</string>
    <string name="fruits">fruits</string>
    <string name="bread">bread</string>
    <string name="drinks">drinks</string>
    <string name="sweets">sweets</string>
    <string name="changeClass">choose wisley</string>
    <string name="tomato">tomato</string>
    <string name="potato">potato</string>
    <string name="onion">onion</string>
    <string name="cocumber">cocumber</string>
    <string name="iceberg">luttece</string>
    <string name="to_many">to many</string>
    <string name="to_low">not enough</string>
    <string name="summary">summary</string>
    <string name="back">back</string>
    <string name="send">send</string>
    <string name="sending">sending</string>
    <string name="nothingOrdered">empty order</string>
    <string name="paprika">paprika</string>
    <string name="parsley">parsley</string>
    <string name="chive">chive</string>
    <string name="garlic">garlic</string>
    <string name="brocooli">brocooli</string>
    <string name="cauliflower">cauliflower</string>
    <string name="orderReceiver">add order receiver</string>
    <string name="enterReceiverNumber">add order receiver number</string>
    <string name="receiver">add order receiver number</string>
    <string name="apple">apple</string>
    <string name="banana">banana</string>
    <string name="lemon">lemon</string>
    <string name="mandarin">mandarin</string>
    <string name="orange">orange</string>
    <string name="peach">peach</string>
    <string name="nectarine">nectarine</string>
    <string name="pear">pear</string>
    <string name="grape">grape</string>
    <string name="watermelon">watermelon</string>
    <string name="cherry">cherry</string>
    <string name="sweetcherry">sweetcherry</string>
    <string name="kiwi">kiwi</string>
    <string name="strawberry">strawberry</string>
    <string name="pineapple">pineapple</string>
    <string name="apricot">apricot</string>
</resources>
